# WRF_build_support

./: .gitignore  Makefile.am  README.md  autogen.sh  build_config.sh.in  configure.ac
cmake/: Makefile.am  build.sh
gcc/: Makefile.am  build.sh
hdf5/: Makefile.am  build.sh
libmesh/: Makefile.am  build.sh
m4/: config_summary.m4
mpich/: Makefile.am  build.sh
netcdf/: Makefile.am  build.sh
netcdf-c/: Makefile.am  build.sh
netcdf-fortran/: Makefile.am  build.sh
openmpi/: Makefile.am  build.sh
petsc/: Makefile.am  build.sh
rules/: Make.compiler_deps  Make.config_envs  Make.mpi_deps  Make.pkg_deps  Make.zlib_deps
trilinos/: Makefile.am  build.sh
utils/: .gitignore  Makefile.am  build_autotools.sh  build_env.sh  build_template.sh  torture.sh  use_stack.sh.in
utils/versions/: bleeding.sh  default.sh  devel.sh  stable.sh
zlib/: Makefile.am  build.sh
