################################################################################
PKG = cmake
PKG_VERSION = $(CMAKE_VERSION)
################################################################################


################################################################################
include $(top_srcdir)/rules/Make.compiler_deps
