################################################################################
PKG = gcc
PKG_VERSION = $(GCC_VERSION)
PKG_BUILD_DEPS =

include $(top_srcdir)/rules/Make.pkg_deps

# Thhings that don't depend on our compiler
BUILT_SOURCES = $(PKG_VERSION)/build.log
################################################################################
