################################################################################
PKG = hdf5
PKG_VERSION = $(HDF5_VERSION)
################################################################################


################################################################################
include $(top_srcdir)/rules/Make.zlib_deps
