################################################################################
PKG = mpich
PKG_VERSION = $(MPICH_VERSION)
################################################################################


################################################################################
include $(top_srcdir)/rules/Make.compiler_deps
