################################################################################
PKG = openmpi
PKG_VERSION = $(OPENMPI_VERSION)
################################################################################


################################################################################
include $(top_srcdir)/rules/Make.compiler_deps
