################################################################################
PKG = petsc
PKG_VERSION = $(PETSC_VERSION)
################################################################################


################################################################################
include $(top_srcdir)/rules/Make.mpi_deps
