################################################################################
# useful sources, this will get them into 'make dist' but not install them...

noinst_SCRIPTS = build_autotools.sh

noinst_DATA = \
	versions/stable.sh \
	versions/devel.sh \
	versions/default.sh

EXTRA_DIST = $(noinst_SCRIPTS) $(noinst_DATA)
