################################################################################
PKG = zlib
PKG_VERSION = $(ZLIB_VERSION)
################################################################################


################################################################################
include $(top_srcdir)/rules/Make.compiler_deps
